Fix search box text color in light mode

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@
       id="searchBox"
       value=""
       placeholder="search for snippets"
-      class="text-base text-white mb-5 sm:my-0 px-3 py-1 font-semibold placeholder:text-gray-400 placeholder:text-base rounded-lg focus:outline-none bg-inherit border-2 border-slate-600"
+      class="text-base dark:text-white mb-5 sm:my-0 px-3 py-1 font-semibold placeholder:text-gray-400 placeholder:text-base rounded-lg focus:outline-none bg-inherit border-2 border-slate-600"
     />
   </div>
 
