Fix code block width on reload

--- a/src/layouts/SubmissionLayout.astro
+++ b/src/layouts/SubmissionLayout.astro
@@ -53,7 +53,7 @@ const { frontmatter } = Astro.props
       }, 700)
     }
 
-    document.addEventListener('astro:after-swap', enableCopyButton)
+    document.addEventListener('astro:page-load', enableCopyButton)
   </script>
   <slot />
 </BaseLayout>
