fix cards layout for mobile screens

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -33,7 +33,7 @@ switch(extension) {
 
 <li class={`card ${cat} ${ext}`}>
 	<a href={href} class="block bg-white dark:bg-slate-700 dark:border-slate-100 dark:border-0 p-6 rounded-lg border-solid border-2 border-black relative ">
-		<h2 class="font-bold dark:text-white text-3xl pb-4 text-ellipsis md:truncate">
+		<h2 class="font-bold dark:text-white text-3xl pb-4 text-ellipsis break-words md:truncate">
 			{title}
 		</h2>
 		<p class="dark:text-slate-300">
