--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
-const { title } = Astro.props
-import Nav from '../components/Nav.astro'
-import Footer from '../components/Footer.astro'
+import { ViewTransitions } from "astro:transitions";
+const { title } = Astro.props;
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -195,6 +195,14 @@ import Footer from '../components/Footer.astro'
           Bitstream Vera Sans Mono,
           Courier New,
           monospace;
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      @-moz-document url-prefix() {
+        * {
+          scrollbar-width: none;
+        }
       }
     </style>
   </body>
