add no-scrollbar class

--- a/src/components/CategorySelector.astro
+++ b/src/components/CategorySelector.astro
@@ -27,7 +27,7 @@ const categories = [
 ]
 ---
 
-<div id="categories" class="flex gap-2 pb-6 overflow-x-scroll">
+<div id="categories" class="flex gap-2 pb-6 overflow-x-scroll no-scrollbar">
   {
     categories.map((category) => (
       <button
