--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -8,7 +8,7 @@ const languages = [
 ]
 ---
 
-<div id="languages" class="flex gap-2 pb-6 overflow-x-scroll">
+<div id="languages" class="flex gap-2 pb-6 overflow-x-scroll no-scrollbar">
   {
     languages.map((language) => (
       <button
