fix mode toggle button bug

--- a/src/components/ThemeToogler.astro
+++ b/src/components/ThemeToogler.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<button class="theme-toggle" id="theme-toggle" title="Toggles light & dark" aria-label="auto" aria-live="polite">
+<button class="theme-toggle z-50 !w-6 sm:!w-8" id="theme-toggle" title="Toggles light & dark" aria-label="auto" aria-live="polite">
     <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
       <mask class="moon" id="moon-mask">
         <rect x="0" y="0" width="100%" height="100%" fill="white" />
@@ -97,7 +97,6 @@ window
   background: none;
   border: none;
   margin-left: 10px;
-  z-index: 10;
   padding: 0;
 
   inline-size: var(--size);
